# blind-watermark

./: readme.md
decoder/: CMakeLists.txt
decoder/src/: decoder.cpp  main.cpp
watermark/: CMakeLists.txt
watermark/src/: main.cpp
